--- a/doc/bonsai.bib
+++ b/doc/bonsai.bib
@@ -67,7 +67,7 @@ note = "\url{http://www.antlr.org}"
 author = "Terence Parr",
 title = "The Definitive {ANTLR} Reference: Building Domain-Specific Languages",
 publisher = "Pragmatic Bookshelf",
-yearh = "2007"
+year = "2007"
 }
 
 @misc { antlr_targets,
